k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mlops-heart-disease
  labels:
    name: mlops-heart-disease
    environment: production
